Revision history for Code-TidyAll

** denotes an incompatible change

0.16  Oct 11, 2012

* Plugins
  - Add PHPCodeSniffer plugin (Joseph Crotty)

0.15  Oct 11, 2012

* Fixes
  - Fix test_dirs test to not rely on file ordering

0.14  Oct 10, 2012

* Improvements
  - Allow a plugin to be listed multiple times in config with different configuration
  - Specify order that plugins run (tidiers before validators, then alpha) and document
    that they are applied atomically
  - Add etc/editors/tidyall.vim for Vim (Justin Devuyst)
  - Add -r/--recursive flag to process directories recursively
  - In -p/--pipe mode, mirror input to output in case of error (Justin Devuyst)
  - Fix -l/--list handling of local files
  - Add --version option
  - Make git prereceive hook more modular, so it can be combined with other checks

0.13  Sep 30, 2012

* Fixes
  - Adjust MasonTidy plugin for new API
  - Remove Util.t containing only author-only tests

0.12  Sep 27, 2012

* Plugins
  - Add podspell plugin (POD spell checker)

* Improvements
  - Add --iterations flag to run tidier transforms multiple times
  - Allow .tidyallrc as alternative to tidyall.ini
  - Allow git prereceive hook to be bypassed by pushing an identical set of commits
    several consecutive times (allow_repeated_push)
  - Add handcrafted usage w/summary of options, instead of Pod::Usage

0.11  Sep 21, 2012

* Improvements
  - Allow multiple select and ignore patterns, separated by whitespace or on separate lines
  - Add -l/--list flag to show which plugins match which files
  - Add conf_name parameter to specify name other than tidyall.ini
  - Redirect stdout to stderr with -p/--pipe, so that stdout is dedicated to the tidied content
  - In tidyall.el, hide error buffer on successful tidy

* Fixes
  - Handle argv/config errors correctly in various plugins
  - Eliminate double-printed error with -p/--pipe
  - Allow relative paths to -p/--pipe

0.10  Sep 12, 2012

* Plugins