@@ -1,0 +1,3 @@
+#!/usr/bin/perl
+use Code::TidyAll::t::Plugin::CSSUnminifier;
+Code::TidyAll::t::Plugin::CSSUnminifier->runtests;
