@@ -5,7 +5,8 @@ Revision history for Code-TidyAll
 0.16  Oct 11, 2012
 
 * Plugins
-  - Add PHPCodeSniffer plugin (Joseph Crotty)
+  - Add phpcs plugin (Joseph Crotty)
+  - Add cssunminifier plugin
 
 0.15  Oct 11, 2012
 
